# kangaroo

./: .editorconfig  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  README_zh.md  deploy.sh  home.html  package-lock.json  package.json  version.json  vls_output.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
databases/mssql/adventureWorks2019/: README.md  data.sql  schema.sql
databases/mssql/chinook/: README.md  data.sql  schema.sql
databases/mssql/shakespeare/: README.md  schema.sql
databases/mssql/sportsdb/: README.md  schema.sql
databases/mysql/chinook/: README.md  data.sql  schema.sql
databases/mysql/jira/: README.md  schema.sql
databases/mysql/sportsdb/: README.md  schema.sql
databases/mysql/wikimedia/: README.md
databases/sqlite/: northwind.sql  sportsdb.sql
docs/: CNAME  README.md
docs/.vuepress/: config.js  enhanceApp.js
docs/guide/: README.md  install_linux.md  install_macos.md  install_windows.md
formula/: kangaroo-multiple.rb
installer/: PKGBUILD
installers/: PKGBUILD  README.md  flatpak.json  rpm.spec  windows.nsi
po/: LINGUAS  POTFILES.in  POTFILES.sh  ar_SA.po  de_DE.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  es_ES.po  fr_FR.po  hi_IN.po  it_IT.po  ja_JP.po  kangaroo.pot  meson.build  pt_BR.po  ru_RU.po  zh_CN.po  zh_HK.po  zh_SG.po  zh_TW.po
tools/: deploy_windows.sh  installer_windows.nsi
tools/installers/: Kangaroo.desktop  README.md  snap.yaml
tools/meson/: install.py  publish.py
(+26 files in other folders)
